# QuickWiki

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTACAO_TECNICA.md  LICENSE  MANIFEST.in  Plan.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt  run_scraper.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  support.yml
.github/workflows/: ci.yml
Manual do Usuário/: 01 - Instalação e Preparação.md  01-instalacao.html  02 - Primeiro Espelho.md  02-primeiro-espelho.html  03 - Perfis, Validação e Modos.md  03-perfis-validacao-modos.html  04 - Navegação Offline.md  04-navegacao-offline.html  05 - Problemas Comuns.md  05-problemas-comuns.html  06 - QuickWiki Studio.md  06-gui-studio.html  README.md  index.html  manual.css
docs/: ARTIFACT_CONTRACTS.md  DECISIONS.md  NEXT_SESSION.md  PROFILE_SCHEMA.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  STATUS.md
profiles/: tibia_fandom.json  tibiawiki_br.json
quickwiki/: __init__.py
schemas/: site_profile.schema.v1.json
scraper/: __init__.py  config.py  crawler.py  extractor.py  gui_assets.py  gui_server.py  models.py  paths.py  presentation.py  reporting.py  site_profiles.py  storage.py  ui_assets.py  url_utils.py  version.py
tests/: test_crawler_runtime.py  test_crawler_source.py  test_extractor.py  test_gui_server.py  test_installed_cli.py  test_paths.py  test_presentation.py  test_quickwiki_module.py  test_run_scraper.py  test_site_profiles.py  test_storage.py  test_url_utils.py
(+2 files in other folders)
